--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Index</title>
 </head>
 <body>
-<h1 th:text="'My Index Page'">Index Page</h1>
+<h1 th:text="'Main index page'">index Page...</h1>
 
 </body>
 </html>
